fix contrast issue on recent works

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,6 +437,10 @@ html, body {
     position: relative;
 }
 
+.section-counters .row {
+    background-color: rgba(33,33,33,0);
+}
+
 .section-counters:before {
     content: '';
     position: absolute;
